# dashboard-studio-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TROUBLESHOOTING.md  Trunk.toml  index.html  input.css  mailmap  package-lock.json  package.json  tailwind.config.js  trunk-dev.toml
.claude/hooks/: pre-commit
.github/workflows/: deploy.yml
docs/: 404.html  dashboard-studio-rs-bd2a9ae1c6a6dbdf.js  dashboard-studio-rs-e585a202be7969a3.js  dashboard-studio-rs-e585a202be7969a3_bg.wasm  output-64766eb73646a49d.css  output-e3f06256cbc4a5f3.css
src/: config.rs  lib.rs  main.rs
src/context/: mod.rs  theme.rs  toast.rs
src/features/dashboard/: context.rs  drag_drop.rs  echarts_bindings.rs  history.rs  io.rs  kpi_aggregation.rs  mod.rs  models.rs
src/features/dashboard/components/: area_chart_widget.rs  bar_chart_widget.rs  candlestick_widget.rs  (+10 more)
src/pages/: dashboard.rs  home.rs  mod.rs  projects.rs  settings.rs
src/ui/: mod.rs
src/ui/atoms/: avatar.rs  badge.rs  button.rs  divider.rs  icon.rs  input.rs  mod.rs  modal_backdrop.rs  select.rs  slider.rs  toast.rs  toggle.rs
src/ui/molecules/: activity_timeline.rs  ai_config_panel.rs  category_tabs.rs  chart_type_selector.rs  column_selector.rs  data_config_panel.rs  data_pill.rs  dataset_item.rs  drop_zone.rs  echarts_wrapper.rs  field_item.rs  field_selector.rs  kpi_card.rs  kpi_quick_actions.rs  layer_item.rs  mod.rs  modal.rs  modal_template_gallery.rs  nav_links.rs  project_card.rs  projects_grid.rs  search_bar.rs  style_config_panel.rs  tab_bar.rs  team_member.rs  template_card.rs  upload_zone.rs  widget_card.rs  widget_selector.rs
src/ui/organisms/: activity_sidebar.rs  canvas_grid.rs  canvas_header.rs  data.rs  header.rs  mod.rs  right_sidebar.rs  widget_configuration_panel.rs
(+58 files in other folders)
