[package]
name = "dashboard-studio-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
uuid = { version = "1.7", features = ["v4", "js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
send_wrapper = "0.6"
csv = "1.3"
chrono = { version = "0.4", features = ["wasmbind"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "HtmlElement",
    "Element",
    "DataTransfer",
    "DragEvent",
    "File",
    "Blob",
    "BlobPropertyBag",
    "FileReader",
    "FileList",
    "ProgressEvent",
    "EventTarget",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Url",
    "Storage",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "DomRect",
    "DomRectReadOnly",
    "PointerEvent",
    "MouseEvent",
    "KeyboardEvent",
]

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[features]
dev-mode = []

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'      # Maximum size optimization (works fine with modern wasm-opt in CI/CD)
lto = true           # Full link-time optimization
codegen-units = 1
panic = "abort"
